add utterences api

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,8 @@ website:
     right:
       - text: Blog
         href: blog.qmd
+      - text: Feedback
+        href: feedback.qmd
       - icon: linkedin
         href: https://www.linkedin.com/in/abuja-r-user-group-669ab521b/
       - icon: github
